--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                     <div class="first-arrow-head">
                         
                     </div>
+                    <div class="first-work-image-div">
+                        <img class="first-work-image" src="reactjslogo.PNG" alt="Error loading image">
+
+                    </div>
                     <div class="first-work-descriptions">
 
                         <h1 class="first-work-heading">React.js Developer</h1>
